# ip-reflector-service

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  cloudbuild.yaml
.devcontainer/: decontainer.json
.idx/: dev.nix
ip-reflector-service/: Cargo.toml
ip-reflector-service/src/: main.rs
src/: lib.rs  main.rs
src/routes/: favicon.rs  index.rs  ip.rs  mod.rs  two.rs
templates/: index.hbs
