[package]
name = "ip-reflector-service"
version = "0.1.4"
edition = "2021"
description = "Returns the public IP address of the endopint making the call to the service."
license = "BSD-2-Clause"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6", features = ["headers"] }
clap = { version = "4.4.2", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
